<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="25sp"
            android:layout_marginHorizontal="25sp">

            <TextView
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/editWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="25sp"
            android:layout_marginHorizontal="25sp">

            <TextView
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/gender"/>

            <EditText
                android:id="@+id/editGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="25sp"
            android:layout_marginHorizontal="25sp">

            <TextView
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/ndrinks"/>

            <EditText
                android:id="@+id/editNdrinks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="25sp"
            android:layout_marginHorizontal="25sp">

            <TextView
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/fasting"/>

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                />
        </LinearLayout>

        <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:layout_gravity="center"
            android:layout_marginVertical="25sp"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>